err/redsolutioncms.django-menu-proxy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/menuproxy'...
Compiling './lib/python3.5/site-packages/menuproxy/importpath.py'...
***   File "./lib/python3.5/site-packages/menuproxy/importpath.py", line 13
    except ImportError, error:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/menuproxy/redsolution_setup'...
Listing './lib/python3.5/site-packages/menuproxy/redsolution_setup/templates'...
Listing './lib/python3.5/site-packages/menuproxy/redsolution_setup/templates/menuproxy'...
Listing './lib/python3.5/site-packages/menuproxy/redsolution_setup/templates/menuproxy/redsolutioncms'...
Listing './lib/python3.5/site-packages/menuproxy/templates'...
Listing './lib/python3.5/site-packages/menuproxy/templates/menuproxy'...
Listing './lib/python3.5/site-packages/menuproxy/templatetags'...
Compiling './lib/python3.5/site-packages/menuproxy/templatetags/menuproxy_tags.py'...
***   File "./lib/python3.5/site-packages/menuproxy/templatetags/menuproxy_tags.py", line 81
    raise template.TemplateSyntaxError, "%r tag requires maximum 4 arguments: current_rule current_obj target_rule target_obj" % splited[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redsolutioncms.django_menu_proxy-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
